--- a/index.html
+++ b/index.html
@@ -2,21 +2,42 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>my HW</title>
+	<title>Document</title>
+	<link rel="stylesheet" href="css/css_reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
-	<h1>hello</h1>
-	<div id="hello">
-		<img src="images/img1.jpg" alt="a pictur of a puupy">
+	<div class="general success">
+		<img src="images/success.png" alt="">
+		<p class="headline h-success">success notification</p>
+		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, cum, pariatur. Adipisci repellendus eaque est ipsa officiis tenetur. Quam, impedit.</p>
 	</div>
-
-	<ul>
-		<il><sub>one</sub></il>
-		<il><sup>two</sup></il>
-		<il><small>three</small></il>
-	</ul>
-	<a href="https://www.google.com" target="_blank">my link</a>
-
-
+	<div class="general error">
+		<img src="images/error.png" alt="">
+		<p class="headline h-error">error notification</p>
+		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, cum, pariatur. Adipisci repellendus eaque est ipsa officiis tenetur. Quam, impedit.</p>
+	</div>
+	<div class="general info">
+		<img src="images/info.png" alt="">
+		<p class="headline h-info">info notification</p>
+		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, cum, pariatur. Adipisci repellendus eaque est ipsa officiis tenetur. Quam, impedit.</p>
+	</div>
+	<div class="general warning">
+		<img src="images/warning.png" alt="">
+		<p class="headline h-warning">warning notification</p>
+		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, cum, pariatur. Adipisci repellendus eaque est ipsa officiis tenetur. Quam, impedit.</p>
+	</div>
+	<div class="general print">
+		<img src="images/print.png" alt="">
+		<p class="headline h-print">print notification</p>
+		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, cum, pariatur. Adipisci repellendus eaque est ipsa officiis tenetur. Quam, impedit.</p>
+	</div>
+	<div class="general buy">
+		<img src="images/buy.png" alt="">
+		<p class="headline h-buy">buy notification</p>
+		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, cum, pariatur. Adipisci repellendus eaque est ipsa officiis tenetur. Quam, impedit.</p>
+	</div>
+			
 </body>
 </html>
